core/sr-api-macros/tests/ui/type_reference_in_impl_runtime_apis_call.stderr
error[E0053]: method `test` has an incompatible type for trait
  --> $DIR/type_reference_in_impl_runtime_apis_call.rs:20:17
   |
14 |         fn test(data: u64);
   |                       --- type in trait
...
20 |         fn test(data: &u64) {
   |                       ^^^^ expected u64, found &u64
   |
   = note: expected type `fn(u64)`
              found type `fn(&u64)`

error[E0308]: mismatched types
  --> $DIR/type_reference_in_impl_runtime_apis_call.rs:18:1
   |
18 | / impl_runtime_apis! {
19 | |     impl self::Api<Block> for Runtime {
20 | |         fn test(data: &u64) {
21 | |             unimplemented!()
22 | |         }
23 | |     }
24 | | }
   | |_^ expected u64, found &u64
   |
   = note: expected type `u64`
              found type `&u64`

Some errors have detailed explanations: E0053, E0308.
For more information about an error, try `rustc --explain E0053`.
